# tenement

./: .gitignore  CHANGELOG.md  Cargo.toml  E2E_TESTING_PLAN.md  FIRECRACKER.md  FIX_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE_9_PREP.md  README.md  ROADMAP.md  TEST_PLAN.md  docs_improvements.md  economics notes  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
cli/: Cargo.toml  askama.toml
cli/dashboard-dist/: index.html
cli/dashboard-dist/assets/: index-D15tgeCK.css  index-DVMgvXbi.js
cli/src/: api_routes.rs  caddy.rs  client.rs  dashboard.rs  install.rs  lib.rs  main.rs  server.rs
cli/templates/: base.html  instances.html  instances_content.html  login.html  logs.html  logs_content.html  overview.html  overview_content.html
cli/tests/: auth_integration.rs  hypervisor_integration.rs  tls_integration.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.svelte
docs/: configuration.md  getting-started.md  index.md  install.sh
examples/: test-all.sh
examples/auth-test/: README.md  app.py  main.py  pyproject.toml  tenement.toml
examples/go-http/: README.md  go.mod  main.go  tenement.toml
examples/hello-world/: README.md  server.sh  tenement.toml
examples/multi-env/: .gitignore  Makefile  README.md  tenement.toml
examples/multi-env/apps/go/: go.mod  main.go
examples/multi-env/apps/node/: server.js
examples/multi-env/apps/python/: server.py
examples/multi-env/apps/rust/: Cargo.toml
examples/multi-env/apps/rust/src/: main.rs
examples/multi-runtime/: go_app.go  node_app.js  py_app.py  tenement.toml  test.sh
examples/multi-tenant/: app.py  demo.sh  tenement.toml
examples/node-fastify/: README.md  package.json  server.js  tenement.toml
examples/python-fastapi/: README.md  app.py  pyproject.toml  tenement.toml
scripts/: e2e.sh
slum/: Cargo.toml
slum/src/: db.rs  lib.rs  server.rs
slum/tests/: integration.rs
tenement/: Cargo.toml
tenement/benches/: performance.rs
tenement/src/: auth.rs  cgroup.rs  config.rs  hypervisor.rs  instance.rs  lib.rs  logs.rs  metrics.rs  port_allocator.rs  storage.rs  store.rs
tenement/src/runtime/: container.rs  firecracker.rs  litebox.rs  mod.rs  namespace.rs  process.rs  qemu.rs  quark.rs  sandbox.rs
tenement/tests/: cgroup_lifecycle.rs  e2e_lifecycle.rs  stress_concurrent.rs  test_utils_verify.rs
tenement/tests/common/: mod.rs
tenement/tests/fixtures/: crash_on_health.sh  exit_immediately.sh  mock_server.sh  slow_startup.sh
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.toml
website/src/content/docs/: index.md
website/src/content/docs/guides/: 01-isolation.md  02-fleet.md  03-configuration.md  04-production.md  05-deployments.md  06-from-docker.md  07-upgrading.md  08-backup.md  09-monitoring.md  configuration.md  getting-started.md  isolation.md
website/src/content/docs/intro/: 01-quick-start.md  02-economics.md  03-concepts.md  economics.md  quick-start.md  why.md
website/src/content/docs/reference/: api.md  cli.md  limitations.md  roadmap.md  troubleshooting.md
website/src/content/docs/use-cases/: 01-multitenant.md  02-scale-to-zero.md  dev.md  microservices.md  multitenant.md  scale-to-zero.md
website/src/styles/: custom.css
