[workspace]
resolver = "2"
members = ["cli", "tenement"]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/russellromney/tenement"
homepage = "https://tenement.dev"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
