[workspace]
resolver = "2"
members = ["cli", "tenement", "slum"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/russellromney/tenement"
homepage = "https://tenement.dev"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server"] }
http-body-util = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-acme = "0.11"
