[package]
name = "tenement-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for tenement - hyperlightweight process hypervisor"

[lib]
name = "tenement_cli"
path = "src/lib.rs"

[[bin]]
name = "ten"
path = "src/main.rs"

[dependencies]
tenement = { path = "../tenement" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed.workspace = true
mime_guess.workspace = true
hyperlocal = "0.9"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
