[package]
name = "tenement-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for tenement - hyperlightweight process hypervisor"

[lib]
name = "tenement_cli"
path = "src/lib.rs"

[[bin]]
name = "ten"
path = "src/main.rs"

[features]
default = []
http3 = ["h3", "h3-quinn", "quinn"]

[dependencies]
tenement = { path = "../tenement" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed.workspace = true
mime_guess.workspace = true
hyperlocal = "0.9"
rustls.workspace = true
tokio-rustls.workspace = true
rustls-acme.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
# HTTP/3 support (optional) - cannot use workspace for optional deps
h3 = { version = "0.0.6", optional = true }
h3-quinn = { version = "0.0.7", optional = true }
quinn = { version = "0.11", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
axum-test = "16"
tempfile = "3"
toml.workspace = true
