[package]
name = "slum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fleet orchestration for tenement - multi-server process management"

[lib]
name = "slum"
path = "src/lib.rs"

[dependencies]
tenement = { path = "../tenement" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tower.workspace = true
tower-http.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tempfile = "3"
axum-test = "16"
