[package]
name = "tenement"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hyperlightweight process hypervisor for single-server deployments"
readme = "../README.md"

[lib]
name = "tenement"
path = "src/lib.rs"

[features]
default = []
firecracker = []
qemu = []
sandbox = ["uuid"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
async-trait = "0.1"
uuid = { version = "1", features = ["v4"], optional = true }

# Linux namespace isolation (always enabled on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["sched", "mount", "process"] }

[dev-dependencies]
tempfile = "3"
