[project]
name = "tenement-fastapi-example"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

# Single-file example (app.py at repo root, no package layout). Tell uv not
# to try to build/install the project itself; just sync the dependencies.
[tool.uv]
package = false
